--- a/index.html
+++ b/index.html
@@ -8,29 +8,47 @@
     <title>To Do</title>
   </head>
   <body>
-    <h1 class="title">to do</h1>
     <div class="form">
-      <form action="javascript:void(0);" method="POST" onsubmit="app.Add()">
-        <input type="text" id="add-todo" placeholder="thing to do">
-        <input type="submit" value="Add" class="btn btn-primary">
-      </form>
-      <p>You have: </p>
-      <p id="counter"></p>
-      <table>
-        <tr class="to-do">
-          <th><h3>to do:</h3></th>
-        </tr>
-        <tbody id="tasks">
-        </tbody>
-      </table>
-    </div>
-    <div id="edit-box" role="aria-hidden">
-      <form id="save-edit" action="javascript:void(0);" method="POST">
-        <input type="text" id="edit-todo">
-        <input type="submit" value="Save" class="btn btn-success">
-        <a onclick="CloseImput()" aria-label="Close">&#10006;</a>
-      </form>
-    </div>
+      <div class="header">
+        <h1 class="title">to do</h1>
+        <form action="javascript:void(0);" method="POST" onsubmit="app.Add()">
+          <input type="text" id="add-todo" placeholder="thing to do">
+          <input type="submit" value="Add" class="btn btn-primary">
+        </form>
+        <p id="counter"></p>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-one">
+            <table>
+              <tr class="to-do">
+                <th><h3>to do:</h3></th>
+              </tr>
+              <tbody id="tasks">
+              </tbody>
+            </table>
+          </div>
+          <div id="edit-box" role="aria-hidden">
+            <form id="save-edit" action="javascript:void(0);" method="POST">
+              <input type="text" id="edit-todo">
+              <input type="submit" value="Save" class="btn btn-success">
+              <a onclick="CloseInput()" aria-label="Close">&#10006;</a>
+            </form>
+          </div>
+          <div class="col-two">
+            <table>
+              <tr class="completed">
+                <th><h3 class="text-success">completed:</h3></th>
+              </tr>
+              <tbody id="completed-list">
+              </tbody>
+            </table>
+          </div>
+          </div>
+        </div>
+      </div>
+
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="scripts.js"></script>
   </body>
